--- a/app/src/main/res/drawable/splash_image.xml
+++ b/app/src/main/res/drawable/splash_image.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@android:color/white" />
     <item
-        android:drawable="@drawable/ic_app_icon"
+        android:drawable="@drawable/logounibook"
         android:gravity="center"
         android:width="128dp"
         android:height="128dp"/>
